--- a/public/cv/index.html
+++ b/public/cv/index.html
@@ -135,7 +135,7 @@
           <h3>Workshop on Grasshopper3D programming in C#</h3>
           <h4><a href="https://www.mcneel.com/eu" target="_blank">McNeel Europe</a> (Barcelona) 28h</h4>
           <ul class="info-list">
-            <li>Advanced C# Scripting with Grasshopper</li>
+            <li>Advanced C# scripting with Grasshopper</li>
             <li>Grasshopper plug-in developement</li>
           </ul>
         </div>
